<resources>
    <string name="app_name">calculator</string>
    <string name="displayHint">0</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="backDelete">C</string>
    <string name="delete">AC</string>
    <string name="parentheseOpenText">(</string>
    <string name="parentheseCloseText">)</string>
    <string name="divideText">/</string>
    <string name="multiplyText">x</string>
    <string name="addText">+</string>
    <string name="subtractText">-</string>
    <string name="decimalText">.</string>
    <string name="equalsText">=</string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigArcSinText">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCosText">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTanText">tan<sup><small>-1</small></sup></string>
    <string name="squareText">√</string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="logText">log</string>




</resources>